feat: 可以批量发送群公告
