# jxh-manager/src/api/types.ts
@@ -50,6 +50,11 @@ export type Group = ApiSchemas['Group']
 export type GroupList = ApiSchemas['GroupList']
 export type GroupRole = ApiSchemas['GroupRole']
 export type GroupSyncResult = ApiSchemas['GroupSyncResult']
+export type GroupNoticePublishRequest = ApiSchemas['GroupNoticePublishRequest']
+export type GroupNoticePublishStatus = ApiSchemas['GroupNoticePublishStatus']
+export type GroupNoticePublishItemStatus = ApiSchemas['GroupNoticePublishItemStatus']
+export type GroupNoticePublishItem = ApiSchemas['GroupNoticePublishItem']
+export type GroupNoticePublishResult = ApiSchemas['GroupNoticePublishResult']
 export type FeatureKey = ApiSchemas['FeatureKey']
 export type FeatureSettings = ApiSchemas['FeatureSettings']
 export type GlobalSettings = ApiSchemas['GlobalSettings']
